<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string translatable="false" name="app_name">Tree Walk Guide</string>
  <string name="permissions_needed">Camera and location permissions are needed to run this application</string>
  <string name="install_google_play">Please install Google Play Services for AR</string>
  <string name="update_ar_core">Please update ARCore</string>
  <string name="update_this_app">Please update this app</string>
  <string name="no_ar_support">This device does not support AR</string>
  <string name="camera_not_available">Camera not available. Try restarting the app.</string>
  <string name="ar_core_exception">Failed to create AR session: %1$s</string>
  <string name="welcome">Welcome to Tree Walk guide!</string>
  <string name="stop_done">Click on the map pin of the stop or select the checkmark menu to acknowledge visitation</string>
  <string name="tree_watering">Click on trees to virtually water them within geofence area marked by the green posts to gather extra points</string>
  <string name="select_language">Select a language</string>
  <string name="language_english">🇺🇸 English</string>
  <string name="language_spanish">🇪🇸 Spanish</string>
  <string name="apply_action">Apply</string>
  <string name="cancel_action">Cancel</string>
  <string name="initializing">The app is initializing</string>
  <string name="wrong_mode">Target a stop or switch to tree watering mode</string>
  <string name="missing_target">Unable to find the target stop</string>
  <string name="already_visited">You already visited this stop</string>
  <string name="try_again">Please try again</string>
  <string name="move_closer">Move closer to the marker</string>
  <string name="click_closer">Click closer to the marker</string>
  <string name="geofence_area">Stand inside the area marked by the green posts while watering</string>
  <string name="click_a_tree">Click closer to a tree for watering</string>
  <string name="companion_website">Companion website</string>
  <string name="companion_website_navigate">Open the companion website</string>
  <string name="speech_helper">Narrator helper</string>
  <string name="speech_helper_desc">The application speaks out about actions, instructions, and information</string>
  <string name="local_test">Local testing</string>
  <string name="local_test_desc">Populate walk stops around the user for testing purposes</string>
  <string name="move_to_next_stop">Great job with the watering! Move to the next stop</string>
  <string name="target_stop">Target Stop Number</string>
  <string name="target_stop_desc">The number of currently targeted stop</string>
  <string name="visited">Congratulations! You visited</string>
  <string name="watering_can">Watering can</string>
  <string name="watering_trees">Watering trees…</string>
  <string name="watering_in_progress">Watering in progress…</string>
  <string name="game_info">Game information</string>
  <string name="score">Score</string>
  <string name="leaderboard">Leaderboard…</string>
  <string name="achievements">Achievements…</string>
  <string name="alternate_names">Other common names</string>
  <string name="scientific_name">Scientific name</string>
  <string name="scientific_alternates">Scientific name synonyms</string>
  <string name="height">Height</string>
  <string name="width">Width</string>
  <string name="description">Info</string>
  <string name="web_page">Web page</string>
  <string name="screen_shot">Screen Shot</string>
  <string name="ok">OK</string>
  <string name="mark_visited">Visited</string>
  <string name="close">Close</string>
  <string name="experience_points">XP gained!</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="evergreen">Evergreen</string>
  <string name="drought_tolerant">Drought tolerant</string>
  <string name="climate_action">Climate Action</string>
  <string name="native_to">Native to</string>
  <string name="fun_fact">Fun fact</string>
</resources>
