<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <SeekBarPreference
        app:key="current_stop"
        app:title="@string/target_stop"
        app:summary="@string/target_stop_desc"
        app:defaultValue="1"
        app:min="1"
        app:seekBarIncrement="1"
        android:max="24"
        app:adjustable="true"
        app:isPreferenceVisible="true"
        app:showSeekBarValue="true"
        android:icon="@drawable/baseline_numbers_24"/>

    <SwitchPreferenceCompat
        app:key="speech_helper"
        app:title="@string/speech_helper"
        app:summary="@string/speech_helper_desc"
        android:icon="@drawable/baseline_volume_up_24"/>

    <SwitchPreferenceCompat
        app:key="local_test"
        app:title="@string/local_test"
        app:summary="@string/local_test_desc"
        android:icon="@drawable/baseline_developer_mode_24"/>

    <Preference
        android:key="connect_button"
        android:persistent="false"
        android:title="@string/companion_website"
        android:summary="@string/companion_website_navigate"
        android:icon="@drawable/baseline_open_in_new_light_24"/>

</PreferenceScreen>
